force-app/main/default/objects/Form_1__c/fields/Position_Number_Look_Up__c.field-meta.xml
<CustomField>
    <fullName>Position_Number_Look_Up__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SEC2 Position Number Look Up</description>
    <label>Position Number Look Up</label>
    <referenceTo>Position__c</referenceTo>
    <relationshipLabel>Form 1s (Position Number Look Up)</relationshipLabel>
    <relationshipName>Form_1s1</relationshipName>
    <type>Lookup</type>
</CustomField>