force-app/main/default/objects/Form_1__c/fields/Position_Status__c.field-meta.xml
<CustomField>
    <fullName>Position_Status__c</fullName>
    <description>Holds position object field Status__c. Serves as filter for reports related to F1 or F1-Status</description>
    <formula>TEXT(SEC1_Position__r.Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Position Status</label>
    <type>Text</type>
</CustomField>