force-app/main/default/objects/Form_1__c/fields/Reason_for_Declined__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Declined__c</fullName>
    <description>For status 'Candidate Declined'. Updated by flow 'HR Form 1 Status - Latest Status - Individual Status SUB FLOW'</description>
    <label>Reason for Declined</label>
    <length>255</length>
    <type>Text</type>
</CustomField>