force-app/main/default/objects/Form_1__c/fields/Recruitment_Status__c.field-meta.xml
<CustomField>
    <fullName>Recruitment_Status__c</fullName>
    <description>To be updated by the newest F1-Status record's status type</description>
    <label>Recruitment Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Copy to Certs</fullName>
            </value>
            <value>
                <fullName>Advertise</fullName>
            </value>
            <value>
                <fullName>App/Cert List Provided</fullName>
            </value>
            <value>
                <fullName>Interview being Held</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Job Offered</fullName>
            </value>
            <value>
                <fullName>Offer was declined</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Packet to HR – receipt</fullName>
            </value>
            <value>
                <fullName>Packet to HR – review</fullName>
            </value>
            <value>
                <fullName>Screening Docs Received</fullName>
            </value>
            <value>
                <fullName>Cal HR review</fullName>
            </value>
            <value>
                <fullName>Info Hold – Org chart</fullName>
            </value>
            <value>
                <fullName>Info Hold - Duty statement</fullName>
            </value>
            <value>
                <fullName>Info Hold - Justification</fullName>
            </value>
            <value>
                <fullName>Info Hold - Screening matrix</fullName>
            </value>
            <value>
                <fullName>Info Hold - Interview questions</fullName>
            </value>
            <value>
                <fullName>Info Hold - KSA</fullName>
            </value>
            <value>
                <fullName>Info Hold - SOQ</fullName>
            </value>
            <value>
                <fullName>Info Hold - Job bulletin</fullName>
            </value>
            <value>
                <fullName>Info Hold – Eligibility see HR Hold</fullName>
            </value>
            <value>
                <fullName>Info Hold - Other</fullName>
            </value>
            <value>
                <fullName>HR Hold (this would include revisiting Eligibility)</fullName>
            </value>
            <value>
                <fullName>Application released</fullName>
            </value>
            <value>
                <fullName>Interviews – scheduled</fullName>
            </value>
            <value>
                <fullName>Interviews - conducted</fullName>
            </value>
            <value>
                <fullName>MQ review</fullName>
            </value>
            <value>
                <fullName>OPF/TEC review</fullName>
            </value>
            <value>
                <fullName>Request to hire submitted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>