force-app/main/default/objects/Form_1__c/fields/Requested_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_Effective_Date__c</fullName>
    <label>Submission Date</label>
    <type>Date</type>
</CustomField>