force-app/main/default/objects/Form_1__c/fields/Required_Form_700__c.field-meta.xml
<CustomField>
    <fullName>Required_Form_700__c</fullName>
    <description>Required Form 700?</description>
    <label>Required Form 700?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Required</fullName>
            </value>
            <value>
                <fullName>Not Required</fullName>
            </value>
            <value>
                <fullName>Inquire with Form 700 Filling Officer</fullName>
            </value>
            <value>
                <fullName>Inquire with Director's Office OLD</fullName>
                <isActive>false</isActive>
                <label>Inquire with Director's Office OLD</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>