force-app/main/default/objects/Form_1__c/fields/Return_to_Progam_Status__c.field-meta.xml
<CustomField>
    <fullName>Return_to_Progam_Status__c</fullName>
    <description>Current return to program status and hold reason</description>
    <label>Return to Progam Status</label>
    <length>70</length>
    <type>Text</type>
</CustomField>