force-app/main/default/objects/Form_1__c/fields/Return_to_Program_Part_1__c.field-meta.xml
<CustomField>
    <fullName>Return_to_Program_Part_1__c</fullName>
    <description>from latest 'Return to Program 1' status - rolled up by DLRS</description>
    <label>Return to Program Part 1</label>
    <type>Date</type>
</CustomField>