force-app/main/default/objects/Form_1__c/fields/Return_to_Program_Part_3__c.field-meta.xml
<CustomField>
    <fullName>Return_to_Program_Part_3__c</fullName>
    <description>from latest 'Return to Program 3' status - rolled up by DLRS</description>
    <label>Return to Program Part 3</label>
    <type>Date</type>
</CustomField>