force-app/main/default/objects/Form_1__c/fields/SEC1_Tenure__c.field-meta.xml
<CustomField>
    <fullName>SEC1_Tenure__c</fullName>
    <label>SEC1 Tenure</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Permanent</fullName>
                <default>true</default>
                <label>Permanent</label>
            </value>
            <value>
                <fullName>Limited Term</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>