force-app/main/default/objects/Form_1__c/fields/SEC1_Time_Base__c.field-meta.xml
<CustomField>
    <fullName>SEC1_Time_Base__c</fullName>
    <label>SEC1 Time Base</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Full Time</fullName>
            </value>
            <value>
                <fullName>Part Time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>