force-app/main/default/objects/Form_1__c/fields/SEC1PosF1__c.field-meta.xml
<CustomField>
    <fullName>SEC1PosF1__c</fullName>
    <defaultValue>false</defaultValue>
    <description>if checked, current position in SEC1 is linked to an active F1 (see HR SEC1 Position Form1 Link flow)</description>
    <label>SEC1PosF1</label>
    <type>Checkbox</type>
</CustomField>