force-app/main/default/objects/Form_1__c/fields/SEC2_Class_Title2__c.field-meta.xml
<CustomField>
    <fullName>SEC2_Class_Title2__c</fullName>
    <label>SEC2 Class Title2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>