force-app/main/default/objects/Form_1__c/fields/SEC2_Time_Base__c.field-meta.xml
<CustomField>
    <fullName>SEC2_Time_Base__c</fullName>
    <label>SEC2 Time Base</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Full Time</fullName>
                <default>true</default>
                <label>Full Time</label>
            </value>
            <value>
                <fullName>Part Time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>