force-app/main/default/objects/Form_1__c/fields/SEC2_Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>SEC2_Transaction_Type__c</fullName>
    <label>SEC2 Transaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Establishment of New Position</fullName>
                <default>true</default>
                <label>Establishment of New Position</label>
            </value>
            <value>
                <fullName>Limited Term Appointment from Temporary Help Funds</fullName>
            </value>
            <value>
                <fullName>Change of Present Position</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>