force-app/main/default/objects/Form_1__c/fields/SEC3_Remarks__c.field-meta.xml
<CustomField>
    <fullName>SEC3_Remarks__c</fullName>
    <label>SEC3 Remarks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>