force-app/main/default/objects/Form_1__c/fields/SEC4_Division__c.field-meta.xml
<CustomField>
    <fullName>SEC4_Division__c</fullName>
    <label>SEC4 Division</label>
    <length>255</length>
    <type>Text</type>
</CustomField>