force-app/main/default/objects/Form_1__c/fields/SEC4_Explanation__c.field-meta.xml
<CustomField>
    <fullName>SEC4_Explanation__c</fullName>
    <label>SEC4 Explanation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>