force-app/main/default/objects/Form_1__c/fields/SEC4_Name2__c.field-meta.xml
<CustomField>
    <fullName>SEC4_Name2__c</fullName>
    <label>SEC4 Name2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>