force-app/main/default/objects/Form_1__c/fields/SEC4_Request_Certification__c.field-meta.xml
<CustomField>
    <fullName>SEC4_Request_Certification__c</fullName>
    <label>SEC4 Request Certification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>