force-app/main/default/objects/Form_1__c/fields/SEC5_Approval__c.field-meta.xml
<CustomField>
    <fullName>SEC5_Approval__c</fullName>
    <label>SEC5 Approval</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved as Requested</fullName>
                <default>true</default>
                <label>Approved as Requested</label>
            </value>
            <value>
                <fullName>Approved as modified</fullName>
            </value>
            <value>
                <fullName>Disapproved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>