force-app/main/default/objects/Form_1__c/fields/SEC5_Form_607_Number__c.field-meta.xml
<CustomField>
    <fullName>SEC5_Form_607_Number__c</fullName>
    <label>SEC5 Form 607 Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>