force-app/main/default/objects/Form_1__c/fields/SEC5_Initials__c.field-meta.xml
<CustomField>
    <fullName>SEC5_Initials__c</fullName>
    <label>SEC5 Initials</label>
    <length>5</length>
    <type>Text</type>
</CustomField>