force-app/main/default/objects/Form_1__c/fields/SEC5_Position_Open__c.field-meta.xml
<CustomField>
    <fullName>SEC5_Position_Open__c</fullName>
    <label>SEC5 Position Open</label>
    <length>255</length>
    <type>Text</type>
</CustomField>