force-app/main/default/objects/Form_1__c/fields/SEC5_Position_Open_Date__c.field-meta.xml
<CustomField>
    <fullName>SEC5_Position_Open_Date__c</fullName>
    <label>SEC5 Position Open Date</label>
    <type>Date</type>
</CustomField>