force-app/main/default/objects/Form_1__c/fields/Signed_Job_Offer_Received__c.field-meta.xml
<CustomField>
    <fullName>Signed_Job_Offer_Received__c</fullName>
    <description>From latest F1 Status "Candidate Accepts", updated by "HR Form 1 Status - Latest Status - Individual Status PART 2"</description>
    <label>Signed Job Offer Received</label>
    <type>Date</type>
</CustomField>