force-app/main/default/objects/Form_1__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Submitted</fullName>
                <default>true</default>
                <label>Not Submitted</label>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Hold</fullName>
            </value>
            <value>
                <fullName>Canceled Due to Amendment</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Pending Analyst Approval</fullName>
            </value>
            <value>
                <fullName>Pending Manager Approval</fullName>
            </value>
            <value>
                <fullName>Rejected by HR Manager</fullName>
            </value>
            <value>
                <fullName>Rejected by HR Analyst</fullName>
            </value>
            <value>
                <fullName>Rejected by Division</fullName>
            </value>
            <value>
                <fullName>Pending Division Approval</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>