force-app/main/default/objects/Form_1__c/fields/Status_Created__c.field-meta.xml
<CustomField>
    <fullName>Status_Created__c</fullName>
    <description>To copy the content from the F1 Status object for reporting purpose</description>
    <label>Status Created</label>
    <type>Date</type>
</CustomField>