force-app/main/default/objects/Form_1__c/fields/Vacancy_Report_Summary__c.field-meta.xml
<CustomField>
    <fullName>Vacancy_Report_Summary__c</fullName>
    <description>For HR Enhancement Vacancy Report (Andy's). This serves as column head custom label translation</description>
    <formula>CASE( General_Recruitment_Status_2__c,
"Packet to HR - Part 1 Received", "Initial Division Submission To HR", 
"Packet to HR - Part 1 Under Review", "Under Review by HR Analyst", 
"Part 1 Return to Program", "Return to Program Part I", 
"Job Post Date", "Form 1 Approved and Job Posted", 
"Packet to HR - Part 2 Under Review", "Under Review by HR Analyst", 
"Part 2 Return to Program", "Return to Program Part II", 
"Release  Applications", "Apps Released To Division", 
"Packet to HR - Part 3 Received", "Packet to HR - Part 3 Received", 
"Packet to HR - Part 3 Under Review", "In  HR Review Process", 
"Minimum Qualification Withhold", "Minimum Qualification Withhold", 
"HR Final Packet - Manager Approved", "HR Approved", 
"Candidate Accepts", "Final Offer Accepted", ""
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vacancy Report Summary</label>
    <type>Text</type>
</CustomField>