force-app/main/default/objects/Form_1__c/fields/Working_Head_Quaters__c.field-meta.xml
<CustomField>
    <fullName>Working_Head_Quaters__c</fullName>
    <formula>BLANKVALUE( SEC2_Working_Headquarters__c ,  SEC1_Working_Headquarters__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Working Headquarters</label>
    <type>Text</type>
</CustomField>