force-app/main/default/objects/Form_1__c/validationRules/Change_Form_700_Status_wo_Pos_Num.validationRule-meta.xml
<ValidationRule>
    <fullName>Change_Form_700_Status_wo_Pos_Num</fullName>
    <active>true</active>
    <description>Change_Form_700_Status_w/o_Pos_Num</description>
    <errorConditionFormula>AND (ISCHANGED(Required_Form_700__c) , ( AND( SEC2_Position_Number__c = "", SEC1_Position_Number__c = "" )))</errorConditionFormula>
    <errorMessage>Please fill in Position Number before making change to this field.</errorMessage>
</ValidationRule>