force-app/main/default/objects/Form_1__c/validationRules/Division_Manual_Entry_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Division_Manual_Entry_Required</fullName>
    <active>true</active>
    <description>For form 1 on blanket position.</description>
    <errorConditionFormula>ISBLANK(SEC1_Position__c ) &amp;&amp; ISBLANK ( TEXT ( Division_Manual_Entry__c ))</errorConditionFormula>
    <errorDisplayField>Division_Manual_Entry__c</errorDisplayField>
    <errorMessage>Please provide Division for this Form 1</errorMessage>
</ValidationRule>