force-app/main/default/objects/Form_1__c/validationRules/SevenHundred_field_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>SevenHundred_field_is_required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( TEXT (Required_Form_700__c))</errorConditionFormula>
    <errorMessage>Please select an option for field "Required Form 700?"</errorMessage>
</ValidationRule>