force-app/main/default/objects/Form_1__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Division__c</columns>
    <columns>Form_1_Unique_Number__c</columns>
    <columns>Status__c</columns>
    <columns>SEC3_Remarks__c</columns>
    <columns>Required_Form_700__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <role>DIR</role>
        <roleAndSubordinates>HR</roleAndSubordinates>
    </sharedTo>
</ListView>