force-app/main/default/objects/Form_1__c/listViews/My_Pending_Form_1s.listView-meta.xml
<ListView>
    <fullName>My_Pending_Form_1s</fullName>
    <columns>NAME</columns>
    <columns>Form_1_Unique_Number__c</columns>
    <columns>Division__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>SEC3_Remarks__c</columns>
    <columns>Requested_Effective_Date__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Mine</filterScope>
    <label>My Form 1s</label>
</ListView>